<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.freya</groupId>
	<artifactId>freya-platform</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>freya</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- Core java and javax packages -->
		<servlet-api.version>3.0.1</servlet-api.version>
		<spring.version>4.2.3.RELEASE</spring.version>
		<spring-security.version>4.0.1.RELEASE</spring-security.version>
		<guava.version>14.0.1</guava.version>
		<hamcrest-library.version>1.3</hamcrest-library.version>
		<junit.version>4.11</junit.version>
		<jackson.version>1.9.13</jackson.version>
		<mockito.version>1.9.5</mockito.version>



		<!-- <javax.el-api.version>3.0.0</javax.el-api.version> -->
		<!-- <jsp-api.version>2.3.1</jsp-api.version> -->
		<!-- <jstl.version>1.2</jstl.version> -->
		<!-- <mail.version>1.4.7</mail.version> -->

		<!-- <validation-api.version>1.1.0.Final</validation-api.version> -->
		<!-- Spring framework modules -->

		<!-- <spring-aop.version>${spring.version}</spring-aop.version> -->
		<!-- <spring-beans.version>${spring.version}</spring-beans.version> -->
		<!-- <spring-context-support.version>${spring.version}</spring-context-support.version> -->
		<!-- <spring-context.version>${spring.version}</spring-context.version> -->
		<!-- <spring-core.version>${spring.version}</spring-core.version> -->
		<!-- <spring-data-commons.version>1.5.1.RELEASE</spring-data-commons.version> -->
		<!-- <spring-jms.version>${spring.version}</spring-jms.version> -->
		<!-- <spring-test.version>${spring.version}</spring-test.version> -->
		<!-- <spring-web.version>${spring.version}</spring-web.version> -->
		<!-- <spring-webmvc.version>${spring.version}</spring-webmvc.version> -->
		<!-- <springframework-webflow.version>${spring.version}</springframework-webflow.version> -->
		<!-- <spring-batch-admin.version>1.2.2.RELEASE</spring-batch-admin.version> -->
		<!-- <spring-batch.version>2.1.9.RELEASE</spring-batch.version> -->
		<!-- <spring-ldap.version>1.3.1.RELEASE</spring-ldap.version> -->


		<!-- <spring-data-neo4j.version>2.3.1.RELEASE</spring-data-neo4j.version> -->
		<!-- <neo4j.version>1.9</neo4j.version> <neo4j-rest-graphdb.version>1.6</neo4j-rest-graphdb.version> 
			<neo4j-cypher-dsl.version>1.7</neo4j-cypher-dsl.version> -->

		<!-- Logging and reporting -->
		<!-- <jasperreports.version>5.1.0</jasperreports.version> -->
		<!-- <logback.version>1.0.13</logback.version> -->
		<!-- <metrics.version>3.0.0-BETA1</metrics.version> -->
		<!-- <slf4j.version>1.7.5</slf4j.version> -->

		<!-- Unit and integration tests -->

		<!-- <testng.version>6.8.5</testng.version> -->

		<!-- Apache commons -->
		<!-- <collections-generic.version>4.01</collections-generic.version> -->
		<!-- <commons-collections.version>3.2.1</commons-collections.version> -->
		<!-- <commons-fileupload.version>1.3</commons-fileupload.version> -->
		<!-- <commons-httpclient.version>3.1</commons-httpclient.version> -->
		<!-- <commons-io.version>1.4</commons-io.version> -->
		<!-- <commons-lang.version>2.6</commons-lang.version> -->

		<!-- Uncategorised dependencies -->
		<!-- <activation.version>1.1.1</activation.version> -->
		<!-- <aspectj.version>1.7.2</aspectj.version> -->
		<!-- <google-api-spelling-java.version>1.1</google-api-spelling-java.version> -->
		<!-- <grmm-deps.version>0.1.3.4</grmm-deps.version> -->

		<!-- <hibernate-validator.version>5.0.1.Final</hibernate-validator.version> -->
		<!-- hibernate-validator.version>4.3.1.Final</hibernate-validator.version --> <!-- https://jira.springsource.org/browse/SPR-10466 -->
		<!-- <inflector.version>0.7.0.0001</inflector.version> -->

		<!-- <jazzy.version>0.5.2</jazzy.version> -->
		<!-- <joda-time.version>2.2</joda-time.version> -->

		<!-- <opencsv.version>2.3</opencsv.version> -->
		<!-- <openjgraph.version>0.9.0</openjgraph.version> -->
		<!-- <opennlp.maxent.version>3.0.2-incubating</opennlp.maxent.version> -->
		<!-- <opennlp.tools.version>1.5.2-incubating</opennlp.tools.version> -->
		<!-- <openxml4j.version>1.0-beta</openxml4j.version> -->
		<!-- <secondstring-serializable.version>2.0.5</secondstring-serializable.version> -->
		<!-- <secondstring.version>20060615</secondstring.version> -->
		<surefire.version>2.14.1</surefire.version>
		<solr.version>4.3.0</solr.version>
		<!-- <xmlrpc-client.version>3.1.3</xmlrpc-client.version> -->
	</properties>



	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.5</version>
		</dependency>
		<!-- <dependency> -->
		<!-- <groupId>org.slf4j</groupId> -->
		<!-- <artifactId>slf4j-log4j12</artifactId> -->
		<!-- <version>1.7.5</version> -->
		<!-- </dependency> -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic </artifactId>
			<version>1.0.13</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core </artifactId>
			<version>1.0.13</version>
		</dependency>
	</dependencies>
	<modules>
		<module>freya-annotate</module>
	</modules>

	<build>
		<finalName>${artifactId}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-scm-plugin</artifactId>
				<version>1.4</version>
				<configuration>
					<connectionType>connection</connectionType>
					<tag>${project.artifactId}-${project.version}</tag>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${surefire.version}</version>
				<configuration>
					<argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
					<perCoreThreadCount>false</perCoreThreadCount>
					<threadCount>1</threadCount>
					<includes>
						<include>**/*Test.java</include>
					</includes>

				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>LocalRepository</id>
			<name>LocalRepository</name>
			<url>file://${project.basedir}/lib</url>
		</repository>
	</repositories>
</project>


